<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/managecoordinates"
    android:background="@color/pitchBlackBackground"
    android:orientation="vertical"
    android:paddingBottom="40dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:text="@string/coordinates_title"
        android:textSize="38sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:fontFamily="@font/san_frans_display"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/coordinates"
        android:textColor="@color/lightGray"
        android:textSize="15sp"/>
    <EditText
        android:id="@+id/floatLatitude"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/textfield"
        android:hint="@string/latitude_textfield"
        android:inputType="numberDecimal"
        android:paddingHorizontal="16dp"
        android:textColor="@color/lightGray"
        android:textColorHint="@color/lightGray"
        android:textSize="16sp"/>
    <EditText
        android:id="@+id/floatLongitude"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/textfield"
        android:hint="@string/longitude_textfield"
        android:inputType="numberDecimal"
        android:paddingHorizontal="16dp"
        android:textColor="@color/lightGray"
        android:textColorHint="@color/lightGray"
        android:textSize="16sp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRefresh"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/refresh_button"
        android:text="Refresh Coordinates"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:icon="@drawable/refresh"
        app:iconTint="@android:color/white"
        app:iconGravity="textStart"
        app:cornerRadius="28dp"/>
</LinearLayout>