<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/pitchBlackBackground"
    android:paddingBottom="40dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/partlycloudy"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:lineSpacingExtra="8dp"
            android:text="@string/requestLocation"
            android:textColor="#FFFFFF"
            android:textSize="22sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dock_less"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reqInfoOne"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:fontFamily="@font/montserrat_bold"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reqInfoTwo"
            android:textColor="#B3FFFFFF"
            android:textSize="15sp"
            android:lineSpacingExtra="4dp"
            android:fontFamily="@font/san_frans_display"/>
    </LinearLayout>
    <ImageButton
        android:id="@+id/locationAgreed"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_circle"
        android:contentDescription="@android:string/ok"
        android:elevation="6dp"
        android:layout_gravity="end"
        android:src="@drawable/right_arrow"
        app:tint="#3B82F6" />
</LinearLayout>